# test

./: .gitignore  Study Notebook.txt  requirements.txt
GPLink/: .env.example  .gitignore  .streamlitignore  CRUD_GUIDE_BM.md  DEPLOY.md  QUICK_ACCESS.md  README.md  START.md  TESTING_GUIDE.md  convert_to_pdf.py  generate_testing_pdf.py  packages.txt  pyproject.toml  requirements.txt
GPLink/.streamlit/: config.toml
GPLink/backend/: ai_analysis.py  crud.py  database.py  main.py  models.py
GPLink/frontend/: app.py
GPLink/uploads/: .gitkeep
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  activate.fish
py/: Tutorial1.py  Tutorial2.py  Tutorial3.py  Tutorial4.py  Tutorial5.py  Tutorial6.py  Tutorial7.py  example.db  fastAPI_mongo.py  fastAPI_sql.py  mongodb.py  sqldatabase.py  streamlit_app.py  students_data.json
