[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gplink-cardio"
version = "1.0.0"
description = "GPLink Cardio - GP-Cardiologist Consultation Portal"
authors = [{name = "DRAHMADSYAHID", email = "dr@gplink.com"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.121.1",
    "uvicorn==0.38.0",
    "pymongo==4.15.3",
    "python-dotenv==1.2.1",
    "pydantic==2.12.4",
    "streamlit==1.39.0",
    "requests==2.32.3",
    "python-multipart==0.0.20",
    "email-validator==2.3.0",
    "bcrypt==4.0.1",
    "reportlab==4.2.5",
    "plotly==5.24.1",
    "passlib==1.7.4",
    "google-generativeai==0.8.5",
    "Pillow==10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["backend", "frontend"]
